--- a/index.pug
+++ b/index.pug
@@ -58,21 +58,29 @@ block content
                             li: a(href='https://urs.groupoid.space/foundations/universe/') U<sub>0</sub> : U<sub>1</sub>
                             li: a(href='https://urs.groupoid.space/foundations/forall/') FORALL
                             li: a(href='https://urs.groupoid.space/foundations/exists/') EXISTS
-                            li: a(href='https://urs.groupoid.space/foundations/and/') AND
-                            li: a(href='https://urs.groupoid.space/foundations/or/') OR
-                            li: a(href='https://urs.groupoid.space/foundations/nat/') NAT
+                            li: a(href='https://urs.groupoid.space/foundations/real/') REAL
                     .macro__col
                         h3#mltt <b>COHESIVE</b>
                         ol
+                            li: a(href='https://urs.groupoid.space/foundations/bose/') BOSONIC
+                            li: a(href='https://urs.groupoid.space/foundations/flat/') FLAT
+                            li: a(href='https://urs.groupoid.space/foundations/sharp/') SHARP
+                            li: a(href='https://urs.groupoid.space/foundations/shape/') SHAPE
+                            li: a(href='https://urs.groupoid.space/foundations/tensor/') TENSOR
                             li: a(href='https://urs.groupoid.space/foundations/smthset/') SMTHSET
+                            li: a(href='https://urs.groupoid.space/foundations/supsmthset/') SUPSMTHSET
+                    .macro__col
+                        h3#mltt <b>TED-K</b>
+                        ol
                             li: a(href='https://urs.groupoid.space/foundations/spectra/') SPECTRA
                             li: a(href='https://urs.groupoid.space/foundations/grpd/') GRPD
                             li: a(href='https://urs.groupoid.space/foundations/ku/') KU
                             li: a(href='https://urs.groupoid.space/foundations/diff/') DIFF
                             li: a(href='https://urs.groupoid.space/foundations/diffku/') DIFFKU
-                            li: a(href='https://urs.groupoid.space/foundations/real/') REAL
-                            li: a(href='https://urs.groupoid.space/foundations/hilbert/') HILBERT
+                            li: a(href='https://urs.groupoid.space/foundations/conf/') CONF<sup>n</sup>
                             li: a(href='https://urs.groupoid.space/foundations/qubit/') QUBIT
+                            li: a(href='https://urs.groupoid.space/foundations/braid/') BRAID
+                            li: a(href='https://urs.groupoid.space/foundations/linear/') LINEAR
                 br
                 +tex.
                     $\mathbf{Installation}$.
