--- a/index.pug
+++ b/index.pug
@@ -62,6 +62,7 @@ block content
                     .macro__col
                         h3#mltt <b>COHESIVE</b>
                         ol
+                            li: a(href='https://urs.groupoid.space/foundations/graded/') GRADED
                             li: a(href='https://urs.groupoid.space/foundations/bose/') BOSONIC
                             li: a(href='https://urs.groupoid.space/foundations/flat/') FLAT
                             li: a(href='https://urs.groupoid.space/foundations/sharp/') SHARP
