--- a/index.pug
+++ b/index.pug
@@ -55,8 +55,9 @@ block content
                         h3#hts <b>MLTT</b>
                         ol
                             li: a(href='https://urs.groupoid.space/foundations/prop/') PROP
-                            li: a(href='https://urs.groupoid.space/foundations/universe/') U<sub>0</sub> : U<sub>1</sub>
+                            li: a(href='https://urs.groupoid.space/foundations/universe/') U<sub>n</sub>
                             li: a(href='https://urs.groupoid.space/foundations/forall/') FORALL
+                            li: a(href='https://urs.groupoid.space/foundations/sigma/') SIGMA
                             li: a(href='https://urs.groupoid.space/foundations/exists/') EXISTS
                             li: a(href='https://urs.groupoid.space/foundations/real/') REAL
                     .macro__col
@@ -71,13 +72,17 @@ block content
                             li: a(href='https://urs.groupoid.space/foundations/smthset/') SMTHSET
                             li: a(href='https://urs.groupoid.space/foundations/supsmthset/') SUPSMTHSET
                     .macro__col
+                        h3#mltt <b>DIFF</b>
+                        ol
+                            li: a(href='https://urs.groupoid.space/foundations/form/') FORM
+                            li: a(href='https://urs.groupoid.space/foundations/diff/') DIFF
+                            li: a(href='https://urs.groupoid.space/foundations/diffku/') DIFFKU
+                    .macro__col
                         h3#mltt <b>TED-K</b>
                         ol
                             li: a(href='https://urs.groupoid.space/foundations/spectra/') SPECTRA
                             li: a(href='https://urs.groupoid.space/foundations/grpd/') GRPD
                             li: a(href='https://urs.groupoid.space/foundations/ku/') KU
-                            li: a(href='https://urs.groupoid.space/foundations/diff/') DIFF
-                            li: a(href='https://urs.groupoid.space/foundations/diffku/') DIFFKU
                             li: a(href='https://urs.groupoid.space/foundations/conf/') CONF<sup>n</sup>
                             li: a(href='https://urs.groupoid.space/foundations/qubit/') QUBIT
                             li: a(href='https://urs.groupoid.space/foundations/braid/') BRAID
