--- a/index.pug
+++ b/index.pug
@@ -52,7 +52,7 @@ block content
             section
                 .macro
                     .macro__col
-                        h3#hts <b>MLTT</b>
+                        h3#hts <b>HTS</b>
                         ol
                             li: a(href='https://urs.groupoid.space/foundations/prop/') PROP
                             li: a(href='https://urs.groupoid.space/foundations/universe/') U<sub>n</sub>
@@ -60,6 +60,8 @@ block content
                             li: a(href='https://urs.groupoid.space/foundations/sigma/') SIGMA
                             li: a(href='https://urs.groupoid.space/foundations/exists/') EXISTS
                             li: a(href='https://urs.groupoid.space/foundations/real/') REAL
+                            li: a(href='https://urs.groupoid.space/foundations/path/') PATH
+                            li: a(href='https://urs.groupoid.space/foundations/glue/') GLUE
                     .macro__col
                         h3#mltt <b>COHESIVE</b>
                         ol
