--- a/foundations/exists/index.pug
+++ b/foundations/exists/index.pug
@@ -4,14 +4,14 @@ html
     head
         meta(property='og:title'       content='EXISTS')
         meta(property='og:description' content='Existential Quantification')
-        meta(property='og:url'         content='https://laurent.groupoid.space/foundations/exists/')
+        meta(property='og:url'         content='https://urs.groupoid.space/foundations/exists/')
 
 block title
     title EXISTS
 
 block content
     nav
-        <a href='../../index.html'>LAURENT</a>
+        <a href='../../index.html'>URS</a>
         <a href='#'>EXISTS</a>
     article.main.list
         section
