--- a/foundations/forall/index.pug
+++ b/foundations/forall/index.pug
@@ -11,7 +11,7 @@ block title
 
 block content
     nav
-        <a href='../../index.html'>LAURENT</a>
+        <a href='../../index.html'>URS</a>
         <a href='#'>FORALL</a>
     article.main
         .exe
