--- a/foundations/glue/index.pug
+++ b/foundations/glue/index.pug
@@ -1,18 +1,18 @@
-include ../../../header
+include ../../header
 
 html
     head
         meta(property='og:title'       content='GLUE')
         meta(property='og:description' content='Glue Types')
-        meta(property='og:url'         content='https://anders.groupoid.space/foundations/univalent/glue/')
+        meta(property='og:url'         content='https://urs.groupoid.space/foundations/glue/')
 
 block title
     title GLUE
 
 block content
     nav
-        <a href='../../../index.html'>ANDERS</a>
-        <a href='../../../lib/index.html'>LIB</a>
+        <a href='../../index.html'>ANDERS</a>
+        <a href='../../lib/index.html'>LIB</a>
         <a href='#'>GLUE</a>
 
     article.main.list
@@ -84,5 +84,5 @@ block content
                 $$
             br.
 
-include ../../../footer
+include ../../footer
 
