--- a/foundations/path/index.pug
+++ b/foundations/path/index.pug
@@ -1,18 +1,18 @@
-include ../../../header
+include ../../header
 
 html
     head
         meta(property='og:title'       content='PATH')
         meta(property='og:description' content='Path Space')
-        meta(property='og:url'         content='https://anders.groupoid.space/foundations/univalent/path/')
+        meta(property='og:url'         content='https://urs.groupoid.space/foundations/path/')
 
 block title
     title PATH
 
 block content
     nav
-        <a href='../../../index.html'>ANDERS</a>
-        <a href='../../../lib/index.html'>LIB</a>
+        <a href='../../index.html'>ANDERS</a>
+        <a href='../../lib/index.html'>LIB</a>
         <a href='#'>PATH</a>
     article.main.list
         .exe
@@ -376,4 +376,4 @@ block content
                     UIP at any Path level which is prohibited. UIP in HoTT
                     is defined only as instance of n-groupoid, see the PROP type.
 
-include ../../../footer
+include ../../footer
