--- a/foundations/sigma/index.pug
+++ b/foundations/sigma/index.pug
@@ -1,18 +1,17 @@
-include ../../../header
+include ../../header
 
 html
     head
         meta(property='og:title'       content='SIGMA')
         meta(property='og:description' content='Dependent Sum')
-        meta(property='og:url'         content='https://anders.groupoid.space/foundations/mltt/sigma/')
+        meta(property='og:url'         content='https://urs.groupoid.space/foundations/sigma/')
 
 block title
     title SIGMA
 
 block content
     nav
-        <a href='../../../index.html'>ANDERS</a>
-        <a href='../../../lib/index.html'>LIB</a>
+        <a href='../../index.html'>URS</a>
         <a href='#'>SIGMA</a>
     article.main.list
         section
@@ -211,4 +210,4 @@ block content
                                  (q: (x: A) -> isContr (B x))
                                : isContr (Sigma A B)
 
-include ../../../footer
+include ../../footer
