--- a/index.pug
+++ b/index.pug
@@ -71,8 +71,8 @@ block content
                             li: a(href='https://urs.groupoid.space/foundations/sharp/') SHARP
                             li: a(href='https://urs.groupoid.space/foundations/shape/') SHAPE
                             li: a(href='https://urs.groupoid.space/foundations/tensor/') TENSOR
-                            li: a(href='https://urs.groupoid.space/foundations/smthset/') SMTHSET
-                            li: a(href='https://urs.groupoid.space/foundations/supsmthset/') SUPSMTHSET
+                            li: a(href='https://urs.groupoid.space/foundations/smthset/') SMTH
+                            li: a(href='https://urs.groupoid.space/foundations/supsmthset/') SUPSMTH
                     .macro__col
                         h3#mltt <b>DIFF</b>
                         ol
