--- a/index.pug
+++ b/index.pug
@@ -16,7 +16,7 @@ block content
     article.main
         .exe
             section
-                h1 QUANTUM TYPE SYSTEM
+                h1 SUPER TYPE SYSTEM
             aside
                 time Published: 28 FEB 2025
 
@@ -66,10 +66,10 @@ block content
                         h3#mltt <b>COHESIVE</b>
                         ol
                             li: a(href='https://urs.groupoid.space/foundations/graded/') GRADED
-                            li: a(href='https://urs.groupoid.space/foundations/bose/') BOSONIC
                             li: a(href='https://urs.groupoid.space/foundations/flat/') FLAT
                             li: a(href='https://urs.groupoid.space/foundations/sharp/') SHARP
-                            li: a(href='https://urs.groupoid.space/foundations/shape/') SHAPE
+                            li: a(href='https://urs.groupoid.space/foundations/bose/') BOSE
+                            li: a(href='https://urs.groupoid.space/foundations/fermi/') FERMI
                             li: a(href='https://urs.groupoid.space/foundations/tensor/') TENSOR
                             li: a(href='https://urs.groupoid.space/foundations/smthset/') SMTH
                             li: a(href='https://urs.groupoid.space/foundations/supsmthset/') SUPSMTH
