--- a/index.pug
+++ b/index.pug
@@ -62,8 +62,9 @@ block content
                             li: a(href='https://urs.groupoid.space/foundations/real/') REAL
                             li: a(href='https://urs.groupoid.space/foundations/path/') PATH
                             li: a(href='https://urs.groupoid.space/foundations/glue/') GLUE
+
                     .macro__col
-                        h3#mltt <b>COHESIVE</b>
+                        h3#mltt <b>SMOOTH</b>
                         ol
                             li: a(href='https://urs.groupoid.space/foundations/graded/') GRADED
                             li: a(href='https://urs.groupoid.space/foundations/flat/') FLAT
@@ -71,16 +72,18 @@ block content
                             li: a(href='https://urs.groupoid.space/foundations/bose/') BOSE
                             li: a(href='https://urs.groupoid.space/foundations/fermi/') FERMI
                             li: a(href='https://urs.groupoid.space/foundations/tensor/') TENSOR
-                            li: a(href='https://urs.groupoid.space/foundations/smthset/') SMTH
-                            li: a(href='https://urs.groupoid.space/foundations/supsmthset/') SUPSMTH
+                            li: a(href='https://urs.groupoid.space/foundations/smth/') SMTH
+                            li: a(href='https://urs.groupoid.space/foundations/supsmth/') SUPSMTH
+
                     .macro__col
                         h3#mltt <b>DIFF</b>
                         ol
                             li: a(href='https://urs.groupoid.space/foundations/form/') FORM
                             li: a(href='https://urs.groupoid.space/foundations/diff/') DIFF
                             li: a(href='https://urs.groupoid.space/foundations/diffku/') DIFFKU
+
                     .macro__col
-                        h3#mltt <b>TED-K</b>
+                        h3#mltt <b>LINEAR</b>
                         ol
                             li: a(href='https://urs.groupoid.space/foundations/spectra/') SPECTRA
                             li: a(href='https://urs.groupoid.space/foundations/grpd/') GRPD
