--- a/foundations/supsmth/index.pug
+++ b/foundations/supsmth/index.pug
@@ -25,7 +25,7 @@ block content
                 +tex.
                     The $\mathbf{SupSmthSet}$ type represents supersmooth sets, defined as sheaves on the
                     category of super Cartesian spaces $\mathbf{SupCrtSp}$ with values in $\mathbf{Set}$.
-                    Supersmooth sets extend $\mathbf{SmthSet}$ from \texttt{smthset.pug} by incorporating
+                    Supersmooth sets extend $\mathbf{SmthSet}$ by incorporating
                     supersymmetry with bosonic and fermionic coordinates, used in supergeometry and quantum physics.
                 +tex.
                     In Urs, $\mathbf{SupSmthSet}$ interacts with graded types from $\mathbf{Graded}$,
