--- a/index.pug
+++ b/index.pug
@@ -52,7 +52,7 @@ block content
             section
                 .macro
                     .macro__col
-                        h3#hts <b>HTS</b>
+                        h3#hts <b>HOMOTOPY</b>
                         ol
                             li: a(href='https://urs.groupoid.space/foundations/prop/') PROP
                             li: a(href='https://urs.groupoid.space/foundations/universe/') U<sub>n</sub>
@@ -83,7 +83,7 @@ block content
                             li: a(href='https://urs.groupoid.space/foundations/diffku/') DIFFKU
 
                     .macro__col
-                        h3#mltt <b>LINEAR</b>
+                        h3#mltt <b>K-THEORY</b>
                         ol
                             li: a(href='https://urs.groupoid.space/foundations/spectra/') SPECTRA
                             li: a(href='https://urs.groupoid.space/foundations/grpd/') GRPD
