--- a/foundations/ku/index.pug
+++ b/foundations/ku/index.pug
@@ -29,7 +29,7 @@ block content
                     in quantum field theory, string theory, and index theory.
                 +tex.
                     In the cohesive type system, $\mathbf{KU_G}$ operates on smooth sets
-                    ($\mathbf{SmthSet}$) and groupoids ($\mathbf{Grpd_{1}}$), producing a type in the
+                    $\mathbf{SmthSet}$ and groupoids $\mathbf{Grpd_{1}}$, producing a type in the
                     universe $\mathbf{U_{(0,0)}}$. It incorporates a twist to account for non-trivial
                     topological structures, making it versatile for modeling complex physical systems.
 
