--- a/index.pug
+++ b/index.pug
@@ -21,16 +21,14 @@ block content
                 time Published: 28 FEB 2025
 
                 +tex.
-                    We present a layered type theory that integrates three foundational
-                    frameworks: Homotopy Type System, de Rham Cohesive Modal Type
-                    Theory, and Equivariant Super Type Theory. This system
-                    builds a progressive structure for formalizing mathematical and
-                    physical concepts, from homotopy and higher categorical structures,
-                    through geometric cohesion and differential properties, to the rich
-                    graded and equivariant world of supergeometry. Inspired by Urs
-                    Schreiber’s work on equivariant super homotopy theory, this layered
-                    approach offers a modular, type-theoretic foundation for synthetic
-                    supergeometry and beyond.
+                    We present Homotopical Supersmooth Differential Quantum Type Theory.
+                    This system builds a progressive structure for formalizing mathematical and physical concepts,
+                    from homotopy and higher categorical structures,
+                    through geometric cohesion and differential properties,
+                    to the rich graded and equivariant world of supergeometry.
+                    Inspired by Urs Schreiber’s work on equivariant super homotopy theory,
+                    this layered approach offers a modular,
+                    type-theoretic foundation for synthetic supergeometry and beyond.
 
                 +tex.
                     Type theory has emerged as a powerful language for mathematics
@@ -64,7 +62,7 @@ block content
                             li: a(href='https://urs.groupoid.space/foundations/glue/') GLUE
 
                     .macro__col
-                        h3#mltt <b>SMOOTH</b>
+                        h3#mltt <b>SUP-SMTH</b>
                         ol
                             li: a(href='https://urs.groupoid.space/foundations/graded/') GRADED
                             li: a(href='https://urs.groupoid.space/foundations/flat/') FLAT
@@ -78,19 +76,19 @@ block content
                     .macro__col
                         h3#mltt <b>DIFF</b>
                         ol
+                            li: a(href='https://urs.groupoid.space/foundations/spectra/') SPECTRA
+                            li: a(href='https://urs.groupoid.space/foundations/grpd/') GRPD
                             li: a(href='https://urs.groupoid.space/foundations/form/') FORM
+                            li: a(href='https://urs.groupoid.space/foundations/ku/') KU
                             li: a(href='https://urs.groupoid.space/foundations/diff/') DIFF
                             li: a(href='https://urs.groupoid.space/foundations/diffku/') DIFFKU
 
                     .macro__col
-                        h3#mltt <b>K-THEORY</b>
+                        h3#mltt <b>LINEAR</b>
                         ol
-                            li: a(href='https://urs.groupoid.space/foundations/spectra/') SPECTRA
-                            li: a(href='https://urs.groupoid.space/foundations/grpd/') GRPD
-                            li: a(href='https://urs.groupoid.space/foundations/ku/') KU
                             li: a(href='https://urs.groupoid.space/foundations/conf/') CONF<sup>n</sup>
-                            li: a(href='https://urs.groupoid.space/foundations/qubit/') QUBIT
                             li: a(href='https://urs.groupoid.space/foundations/braid/') BRAID
+                            li: a(href='https://urs.groupoid.space/foundations/qubit/') QUBIT
                             li: a(href='https://urs.groupoid.space/foundations/linear/') LINEAR
                 br
                 +tex.
