--- a/index.pug
+++ b/index.pug
@@ -38,9 +38,10 @@ block content
                     of capturing homotopy, cohesion, and supergeometry:
 
                 +tex.
-                    1) Homotopy Type System: foundation for higher categorical structures via types as $\infty$-groupoids.
-                    2) Cohesive Modal Type Theory: modal operators for geometric cohesion and differential structure.
-                    3) Equivariant Super Type Theory: The graded universes/tensors, group actions, and super-modality.
+                    1) Homotopy Type System: foundation for homotopical properties of spaces;
+                    2) Super Smooth Type Theory: the graded universes/tensors, group actions, and super-modality operators for geometric cohesion and differential structure such as bosonic/fermionic, flat/sharp modalities;
+                    3) Differential K-Theoretical Type Theory: homotopical foundations via spectra and groupoids, supporting differential K-theory with forms, connections, and refined cohomology structures;
+                    4) Quantum Linear Type Theory: configuration spaces and braids for quantum statistics, supporting quantum systems and linear types for resource-sensitive quantum programming.
 
                 +tex.
                     Each layer builds on the previous, culminating in a system tailored
