--- a/index.pug
+++ b/index.pug
@@ -85,7 +85,7 @@ block content
                             li: a(href='https://urs.groupoid.space/foundations/diffku/') DIFFKU
 
                     .macro__col
-                        h3#mltt <b>LINEAR</b>
+                        h3#mltt <b>QUANTUM</b>
                         ol
                             li: a(href='https://urs.groupoid.space/foundations/conf/') CONF<sup>n</sup>
                             li: a(href='https://urs.groupoid.space/foundations/braid/') BRAID
