--- a/index.pug
+++ b/index.pug
@@ -16,12 +16,12 @@ block content
     article.main
         .exe
             section
-                h1 SUPER TYPE SYSTEM
+                h1 HOMOTOPY SUPER SMOOTH DIFFERENTIAL QUANTUM TYPE SYSTEM
             aside
                 time Published: 28 FEB 2025
 
                 +tex.
-                    We present Homotopical Supersmooth Differential Quantum Type Theory.
+                    We present Homotopy Supersmooth Differential Quantum Type Theory.
                     This system builds a progressive structure for formalizing mathematical and physical concepts,
                     from homotopy and higher categorical structures,
                     through geometric cohesion and differential properties,
