--- a/index.pug
+++ b/index.pug
@@ -16,7 +16,7 @@ block content
     article.main
         .exe
             section
-                h1 HOMOTOPY SUPER SMOOTH DIFFERENTIAL QUANTUM TYPE SYSTEM
+                h1 HOMOTOPY SUPER SMOOTH <br> DIFFERENTIAL QUANTUM <br> TYPE SYSTEM
             aside
                 time Published: 28 FEB 2025
 
