--- a/index.pug
+++ b/index.pug
@@ -21,7 +21,7 @@ block content
                 time Published: 28 FEB 2025
 
                 +tex.
-                    We present Homotopy Supersmooth Differential Quantum Type Theory.
+                    We present Homotopy Supersmooth Differential Quantum Type System.
                     This system builds a progressive structure for formalizing mathematical and physical concepts,
                     from homotopy and higher categorical structures,
                     through geometric cohesion and differential properties,
